Polish Python runtime internals